# video_streamming

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerrun.aws.json  check.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: build_push_ecr.yml  deploy.yml  pre-commit.yml  test.yml
app/: .env-example  .env.db  .env.db-example  entrypoint.sh  for_delete.py  main.py  models.py  settings.py  utils.py
app/account/: __init__.py  models.py  permissions.py  schemas.py  serializers.py  services_views.py  validate_datas.py  views.py
app/auth/: serializers.py  services_views.py  views.py
app/migrations/versions/: 016b3520e3a5_.py  04a7e7949c24_initial_migration.py  0c40b21429bd_.py  42f162f53cb3_.py  5449e1df21c0_create_video_and_account_table.py  9247c9d246df_initial.py  9e2a0318ad26_create_videos.py  bde1aa0ecc9c_initial_migration.py  fc466d2ecaaa_update_account_model.py
app/tests/: conftest.py  setup_tests.py  test_flask_run.py
app/tests/test_account/: test_services.py  test_validate_data.py  test_views.py  test_views_account.py  test_views_auth.py
app/tests/test_auth/: test_services.py  test_validate_data.py  test_views.py
app/tests/test_videos/: test_views.py
app/utils/: before_request.py  data_process.py  endpoint_mixins.py  error_handlers.py  exceptions.py  mixins.py  permissions.py  serializers.py
app/video/: __init__.py  models.py  permissions.py  schemas.py  serializer.py  services_views.py  views.py
